--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "sort-by": "^1.2.0"
   },
   "devDependencies": {
-    "react-scripts": "0.9.5"
+    "react-scripts": "0.9.5",
+    "webpack-dev-server": ">=3.1.11",
+    "merge": ">=1.2.1",
+    "mime": ">=1.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
